--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -12,7 +12,7 @@
     <div class="col-md-8">
       <div class="panel panel-primary" ng-controller="NewGoalCtrl">
         <div class="panel-heading">
-          <h5>Create a new goal for this month</h5>
+          <h5>Create a new goal</h5>
         </div>
         <div class="panel-body">
 
