Rename label on field

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -18,7 +18,7 @@
 
           <form class="form-horizontal" name="newGoal">
             <div class="form-group">
-              <label for="inputGoalName" class="col-sm-2 control-label" required >Name</label>
+              <label for="inputGoalName" class="col-sm-2 control-label" required >Goal</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="inputGoalName" placeholder="Stay classy!" ng-model="goal.name" required>
               </div>
