Add the logo to the navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,5 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "goals";
+
+.navbar-brand img {height:25px;width:25px;display: inline;}
