--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -3,7 +3,10 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Goals</a>
+        <a class="navbar-brand" href="#">
+          <%= image_tag 'logo.png' %>
+          Goals
+        </a>
       </div>
     </div>
   </nav>
